# just-keep-swarming

./: .gitignore  .gitmodules  .pylintrc  .yamllint  NewMCwESP.kicad_sch  README.md  RaspberryPi  flake.nix  install_linters.sh  install_linters_macos.sh
.githooks/: commit-msg  pre-commit
Cadence_Schematics/: README.txt
Cadence_Work/: data.dm  data.dm.cdslck.RHEL30.iht32-1508.engr.wustl.edu.4111315
Cadence_Work/EPM_Circuit/schematic/: data.dm  sch.oa  sch.oa-  sch.oa.cdslck
Cadence_Work/N_mos/symbol/: symbol.oa  symbol.oa-  symbol.oa.cdslck.RHEL30.iht32-1504.engr.wustl.edu.1702975
Cadence_Work/N_mos_schem/schematic/: data.dm  sch.oa
Cadence_Work/test_transistor/schematic/: data.dm  sch.oa
ElectropermanentMagnet/: ElectropermanentMagnet.kicad_pcb  ElectropermanentMagnet.kicad_prl  ElectropermanentMagnet.kicad_pro  ElectropermanentMagnet.kicad_sch  fp-info-cache  fp-lib-table
ElectropermanentMagnet/dual_magnet/: dual_magnet.kicad_prl  dual_magnet.kicad_pro  dual_magnet.kicad_sch  sym-lib-table  transistor.bak  transistor.kicad_sym
ElectropermanentMagnet/transistors.pretty/: Dual PN-Type Transistor.kicad_mod
How2s/: Cadence Installer.docx
MotorController/: MC.kicad_pro  MC.kicad_sch  buck converter.kicad_mod
NewMC/: #auto_saved_files#  NewMC.kicad_pcb  NewMC.kicad_prl  NewMC.kicad_pro  NewMC.kicad_sch  fp-info-cache  ~NewMC.kicad_sch.lck
ProjectOutline/: README.txt
embedded/esp/: build.sh  config.sh  flash.sh  sdkconfig  sdkconfig.old  uros_build.sh
embedded/esp/components/.github/workflows/: ci.yml  nightly.yml
embedded/esp/main/: CMakeLists.txt  drone_processor.c  drone_processor.h  main.c  motor_driver.c  motor_driver.h  receiver.c  receiver.h  util.h
embedded/esp/main/include/: command_parser.h  differential_drive.h  motor_driver.h  pid.h  util.h
embedded/esp/main/src/: command_parser.c  differential_drive.c  drone_processor.c  main.c  motor_driver.c  pid.c
embedded/esp/scripts/: daemon.sh  esp_build.sh  esp_config.sh  esp_flash.sh  ros_source.sh  ros_test.sh  uros_build.sh
ros/src/camera_feed/: package.xml  setup.cfg  setup.py
ros/src/camera_feed/camera_feed/: camera_feed.py
ros/src/camera_feed/test/: test_copyright.py  test_flake8.py  test_pep257.py
ros/src/control_algorithms/: CMakeLists.txt  README.md  package.xml
ros/src/control_algorithms/action/: Assemble.action  MultiRobotPathPlan.action  PID.action
ros/src/control_algorithms/include/control_algorithms/: assembler_action_server.hpp  demo_assembler_client.hpp  demo_mrpp_client.hpp  multi_robot_path_planner_action_server.hpp  pid_action_server.hpp
ros/src/control_algorithms/include/control_algorithms/algorithms/: assemble_graph.hpp  astar.hpp  common.hpp  pplan.hpp  sstar.hpp
ros/src/control_algorithms/include/control_algorithms/controller/: controller.hpp
ros/src/control_algorithms/include/control_algorithms/test/: test_PID.hpp
ros/src/control_algorithms/include/control_algorithms/test_client/: test_client.hpp
ros/src/control_algorithms/src/: assembler_action_server.cpp  demo_assembler_client.cpp  demo_mrpp_client.cpp  multi_robot_path_planner_action_server.cpp  pid_action_server.cpp  pid_entry.cpp
ros/src/control_algorithms/src/algorithms/: assemble_graph.cpp  astar.cpp  common.cpp  pplan.cpp  sstar.cpp
ros/src/control_algorithms/src/controller/: controller.cpp
ros/src/control_algorithms/src/test/: test_PID.cpp
ros/src/control_algorithms/src/test_client/: test_client.cpp
ros/src/control_algorithms/test/: assemble_graph_test.cpp  astar_test.cpp  common_test.cpp  pplan_test.cpp  sstar_test.cpp
ros/src/demo_control/: package.xml  setup.cfg  setup.py
ros/src/demo_control/demo_control/: demo_control.py
ros/src/drone_msg/: CMakeLists.txt  package.xml
ros/src/drone_msg/msg/: RobotPosition.msg
ros/src/manual_control/: package.xml  setup.py
ros/src/manual_control/launch/: manual_control.launch.py
ros/src/manual_control/manual_control/: joy_to_twist.py
ros/src/map_maker/: package.xml  setup.cfg  setup.py
ros/src/map_maker/beta_map_maker/: bresenham mapping algorithm
ros/src/map_maker/map_maker/: map_maker.py  pixel_to_real.py  visualize_pixel_to_world.py
ros/src/map_maker/test/: deptest_map.py  test_map.py  test_project.py
ros/src/overhead_cv/: README.md  ReadME.md  package.xml  setup.cfg  setup.py
ros/src/overhead_cv/config/: cam_meta.yaml  five_robots.rviz
ros/src/overhead_cv/launch/: overhead_tracking_launch.py
ros/src/overhead_cv/overhead_cv/: camera_feed.py  cv_recorder.py  obstacle_detector.py  position_estimator.py  robot_tracker.py
ros/src/overhead_cv/overhead_cv/utils/: angle_calculation.py  extended_kalman_filter.py  filtering_types.py  hungarian.py  img_proc_utils.py  kalman_filter.py  low_pass_filter.py  multi_robot_estimator.py  normalize_angle.py  pixel_to_real.py  pixel_to_world.py  pose_convert.py  quat_to_yaw.py  robot_estimator.py
ros/src/overhead_cv/test/: test_copyright.py  test_overhead.py  test_pep257.py
ros/src/shared_types/: CMakeLists.txt  package.xml
ros/src/shared_types/msg/: PidPosition.msg  RobotPoints.msg
ros/src/shared_types/srv/: CamMeta.srv  IdRequest.srv  PositionList.srv
ros/src/simulation/: README.md  package.xml  setup.py
ros/src/simulation/description/: robot.template.sdf  robot_params.yaml  world.template.sdf
ros/src/simulation/launch/: simulation_launch.py
ros/src/simulation/simulation/: demo_control.py
ros/src/simulation/simulation/utils/: compile_sdf.py  compile_world.py
ros/src/simulation/test/: test_compile_sdf.py  test_compile_sdf_world.py
ros/src/web_package/: package.xml  setup.cfg  setup.py
ros/src/web_package/templates/: index.html
ros/src/web_package/web_package/: web_interface.py
