<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>overhead_cv</name>
  <version>0.0.0</version>
  <description>Reads video feed from /video and calculates position from center given some reference conversion frame</description>
  <maintainer email="jaximus808@gmail.com">observer</maintainer>
  <license>Apache-2.0</license>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_navigator</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>shared_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
